# ib-cgt

./: .gitignore  AGENTS.md  CLAUDE.md  environment.yml  pyproject.toml
docs/: architecture.md  fx.md  index.md
src/ib_cgt/: __init__.py  cli.py  config.py
src/ib_cgt/db/: __init__.py  codecs.py  connection.py  migrator.py
src/ib_cgt/db/migrations/: 001_initial.sql  002_ix_instruments_currency.sql  __init__.py
src/ib_cgt/db/repos/: __init__.py  accounts.py  fx_rates.py  instruments.py  statements.py  tax_runs.py  trades.py
src/ib_cgt/domain/: __init__.py  disposal.py  enums.py  money.py  report.py  tax_year.py  trading.py
src/ib_cgt/fx/: __init__.py  client.py  errors.py  service.py
src/ib_cgt/ingest/: __init__.py  hashing.py  ingestor.py  keys.py  mapper.py  parser.py
tests/: test_smoke.py
tests/integration/: test_ingest_real.py
tests/unit/db/: conftest.py  test_accounts_repo.py  test_fx_rates_repo.py  test_instruments_repo.py  test_migrator.py  test_statements_repo.py  test_tax_runs_repo.py  test_trades_repo.py  test_trades_repo_list_filtered.py
tests/unit/domain/: test_disposal.py  test_enums.py  test_instruments.py  test_money.py  test_report.py  test_tax_year.py  test_trading.py
tests/unit/fx/: conftest.py  test_cli_fx_sync.py  test_client.py  test_service.py  test_sync_currencies.py
tests/unit/ingest/: test_hashing.py  test_ingestor.py  test_keys.py  test_mapper.py  test_parser.py
